--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="main">
-            <h1>Sudoku 4x4</h1>
+            <h1>Sudoku 4x4 Gitpod</h1>
             <div id="griglia">
                 <div id="a1" class="casella" onclick="setNumberA1()"></div>
                 <div id="a2" class="casella" onclick="setNumberA2()"></div>
