--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+  Pagine pubblicate su github e ambiente di lavoro su gitpod.io
+  per una preview live eseguire il comando
+  npx browser-sync start -s -w --ui-port 40001
+-->
 <!DOCTYPE html>
 <html>
     <head>
