--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        <div id="main">
+        <div id="container">
             <h1>Sudoku 4x4</h1>
-            <div id="griglia">
-                <div id="11" class="casella" onclick="setNumber('1','1')"></div>
-                <div id="12" class="casella" onclick="setNumber('1','2')"></div>
-                <div id="13" class="casella" onclick="setNumber('1','3')"></div>
-                <div id="14" class="casella" onclick="setNumber('1','4')"></div>
-                <div id="21" class="casella" onclick="setNumber('2','1')"></div>
-                <div id="22" class="casella" onclick="setNumber('2','2')"></div>
-                <div id="23" class="casella" onclick="setNumber('2','3')"></div>
-                <div id="24" class="casella" onclick="setNumber('2','4')"></div>
-                <div id="31" class="casella" onclick="setNumber('3','1')"></div>
-                <div id="32" class="casella" onclick="setNumber('3','2')"></div>
-                <div id="33" class="casella" onclick="setNumber('3','3')"></div>
-                <div id="34" class="casella" onclick="setNumber('3','4')"></div>
-                <div id="41" class="casella" onclick="setNumber('4','1')"></div>
-                <div id="42" class="casella" onclick="setNumber('4','2')"></div>
-                <div id="43" class="casella" onclick="setNumber('4','3')"></div>
-                <div id="44" class="casella" onclick="setNumber('4','4')"></div>
+            <div id="grid">
+                <div id="11" class="square" onclick="setNumber('1','1')"></div>
+                <div id="12" class="square" onclick="setNumber('1','2')"></div>
+                <div id="13" class="square" onclick="setNumber('1','3')"></div>
+                <div id="14" class="square" onclick="setNumber('1','4')"></div>
+                <div id="21" class="square" onclick="setNumber('2','1')"></div>
+                <div id="22" class="square" onclick="setNumber('2','2')"></div>
+                <div id="23" class="square" onclick="setNumber('2','3')"></div>
+                <div id="24" class="square" onclick="setNumber('2','4')"></div>
+                <div id="31" class="square" onclick="setNumber('3','1')"></div>
+                <div id="32" class="square" onclick="setNumber('3','2')"></div>
+                <div id="33" class="square" onclick="setNumber('3','3')"></div>
+                <div id="34" class="square" onclick="setNumber('3','4')"></div>
+                <div id="41" class="square" onclick="setNumber('4','1')"></div>
+                <div id="42" class="square" onclick="setNumber('4','2')"></div>
+                <div id="43" class="square" onclick="setNumber('4','3')"></div>
+                <div id="44" class="square" onclick="setNumber('4','4')"></div>
             </div>
-            <div id="scelta">
+            <div id="select">
                 <div>
                     <input type="radio" id="1" name="number" value="1"
                            checked>
