--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
     <head>
         <title>Sudoku 4x4</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="script.js"></script>
     </head>
