--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div id="42" class="square" onclick="setNumber('4','2')"></div>
                 <div id="43" class="square" onclick="setNumber('4','3')"></div>
                 <div id="44" class="square" onclick="setNumber('4','4')"></div>
-            </div>
+            <div>
             <div id="select">
                 <div>
                     <input type="radio" id="1" name="number" value="1"
