--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <div id="grid">
               <div class="square" onclick="setNumber('1','1')">
                 <div class="content">
-                  <div class="table">
-                    <div id="11" class="table-cell numbers"></div>
-                  </div>
+                    <div id="11" class="numbers"></div>
                 </div>
               </div>
               <div class="square" onclick="setNumber('1','2')">
