--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!--
   Pagine pubblicate su github e ambiente di lavoro su gitpod.io
   per una preview live eseguire il comando
+  test
   npx browser-sync start -s -w --ui-port 40001
 -->
 <!DOCTYPE html>
